   - djm@cvs.openbsd.org 2008/05/09 14:26:08
     [ssh.c]
     dingo stole my diff hunk
   - markus@cvs.openbsd.org 2008/05/09 16:16:06
     [session.c]
     re-add the USE_PIPES code and enable it.
     without pipes shutdown-read from the sshd does not trigger
     a SIGPIPE when the forked program does a write.
     ok djm@
     (Id sync only, USE_PIPES never left portable OpenSSH)

20080403
 - (djm) [openbsd-compat/bsd-poll.c] Include stdlib.h to avoid compile-
   time warnings on LynxOS. Patch from ops AT iki.fi
 - (djm) Force string arguments to replacement setproctitle() though
   strnvis first. Ok dtucker@

20080403
 - (djm) OpenBSD CVS sync:
   - markus@cvs.openbsd.org 2008/04/02 15:36:51
     [channels.c]
     avoid possible hijacking of x11-forwarded connections (back out 1.183)
     CVE-2008-1483; ok djm@
   - jmc@cvs.openbsd.org 2008/03/27 22:37:57
     [sshd.8]
     remove trailing whitespace;
   - djm@cvs.openbsd.org 2008/04/03 09:50:14
     [version.h]
     openssh-5.0
 - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
   [contrib/suse/openssh.spec] Crank version numbers in RPM spec files
 - (djm) [README] Update link to release notes
 - (djm) Release 5.0p1

20080315
 - (djm) [regress/test-exec.sh] Quote putty-related variables in case they are
   empty; report and patch from Peter Stuge
 - (djm) [regress/test-exec.sh] Silence noise from detection of putty
   commands; report from Peter Stuge
 - (djm) [session.c] Relocate incorrectly-placed closefrom() that was causing
   crashes when used with ChrootDirectory


20080327
 - (dtucker) Cache selinux status earlier so we know if it's enabled after a
   chroot.  Allows ChrootDirectory to work with selinux support compiled in
   but not enabled.  Using it with selinux enabled will require some selinux
   support inside the chroot.  "looks sane" djm@
 - (djm) Fix RCS ident in sftp-server-main.c
 - (djm) OpenBSD CVS sync:
   - jmc@cvs.openbsd.org 2008/02/11 07:58:28