@@ -127,6 +127,12 @@
      a SIGPIPE when the forked program does a write.
      ok djm@
      (Id sync only, USE_PIPES never left portable OpenSSH)
+   - markus@cvs.openbsd.org 2008/05/09 16:17:51
+     [channels.c]
+     error-fd race: don't enable the error fd in the select bitmask
+     for channels with both in- and output closed, since the channel
+     will go away before we call select();
+     report, lots of debugging help and ok djm@
 
 20080403
  - (djm) [openbsd-compat/bsd-poll.c] Include stdlib.h to avoid compile-
@@ -3987,4 +3993,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4928 2008/05/19 06:04:56 djm Exp $
+$Id: ChangeLog,v 1.4929 2008/05/19 06:05:41 djm Exp $
